# artifacts/api-server/src/routes/index.ts
@@ -1,8 +1,14 @@
 import { Router, type IRouter } from "express";
 import healthRouter from "./health";
+import profileRouter from "./profile";
+import dictionaryRouter from "./dictionary";
+import eventsRouter from "./events";
 
 const router: IRouter = Router();
 
 router.use(healthRouter);
+router.use(profileRouter);
+router.use(dictionaryRouter);
+router.use(eventsRouter);
 
 export default router;
